arm64: dts: apple: Add A8X devices
Add DTS files for the A8X SoC and the only device based on it, the iPad
Air 2.

Co-developed-by: Ivaylo Ivanov ivo.ivanov.ivanov1@gmail.com
[Ivalyo: system memory bits]
Signed-off-by: Ivaylo Ivanov ivo.ivanov.ivanov1@gmail.com
Signed-off-by: Konrad Dybcio <konrad.dybcio@somainline.org>

--- a/arch/arm64/boot/dts/apple/Makefile
+++ b/arch/arm64/boot/dts/apple/Makefile
@@ -16,6 +16,8 @@ dtb-$(CONFIG_ARCH_APPLE) += t7000-j97.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t7000-n102.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t7000-n56.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t7000-n61.dtb
+dtb-$(CONFIG_ARCH_APPLE) += t7001-j81.dtb
+dtb-$(CONFIG_ARCH_APPLE) += t7001-j82.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t8103-j274.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t8103-j293.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t8103-j313.dtb
