[wip, need to separate this] arm64: dts: apple: Add A9/X devices
Add DTS files for the A9/X SoC and the following devices based on it:
- iPhone 6S
- iPhone 6S Plus
- iPhone SE (2016)
- iPad 5
- iPad Pro (1st gen) (A9X)

The A9 SoC comes in two flavours: S8000 (Samsung) and S8003 (TSMC). While
there aren't any obvious software differences now, keep the DTs separate
to make it less of a pain to introduce chip-specific code paths later on,
should there be any. Even if there won't be, it's good to describe the
hardware properly, hence separate compatibles and mentions of the SoC in
the model property.

This does not however concern the A9X (S8001), which is only made in a
single fab.

--- a/arch/arm64/boot/dts/apple/Makefile
+++ b/arch/arm64/boot/dts/apple/Makefile
@@ -10,6 +10,20 @@ dtb-$(CONFIG_ARCH_APPLE) += s5l8960x-j87.dtb
 dtb-$(CONFIG_ARCH_APPLE) += s5l8960x-j87m.dtb
 dtb-$(CONFIG_ARCH_APPLE) += s5l8960x-n51.dtb
 dtb-$(CONFIG_ARCH_APPLE) += s5l8960x-n53.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8000-j71s.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8000-j72s.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8000-n66.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8000-n69u.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8000-n71.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8001-j127.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8001-j128.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8001-j99a.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8001-j98a.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8003-j71t.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8003-j72t.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8003-n66m.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8003-n69.dtb
+dtb-$(CONFIG_ARCH_APPLE) += s8003-n71m.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t7000-j42d.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t7000-j96.dtb
 dtb-$(CONFIG_ARCH_APPLE) += t7000-j97.dtb
